# trAIder

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  Design_Prompt_for_trAIder_Claude.md  Makefile  README.md  SECURITY-AUDIT.md  claude-design-frontend-prompt.md  claude-pitch-deck-design-prompt.md  docker-compose.yml  licensing-prompt.md  project.md
.github/workflows/: contracts.yml  e2e.yml  frontend.yml  python.yml
animated illustration prompts/: hero-combo-converging-coliseum.md  hero-concept-1-convergence.md  hero-concept-4-coliseum-arena.md  hero-concept-5-strategy-fields.md
backend/: pyproject.toml
backend/src/backend/: __init__.py  openapi_export.py
backend/src/backend/ws/: __init__.py  channels.py  models.py
backend/tests/: __init__.py  test_ws_models.py
contracts/: foundry.toml  slither.config.json
contracts/script/: 01-Deploy.s.sol  02-SeedPools.s.sol  03-WithdrawLP.s.sol
contracts/src/: ArbitragePrimitive.sol  JournalRegistry.sol  PerformanceOracle.sol  SessionFactory.sol  SettlementContract.sol  mTokenVault.sol
contracts/src/adapters/: GMXAdapter.sol
contracts/src/interfaces/: IArbitragePrimitive.sol  IMTokenVault.sol  IPerformanceOracle.sol  IPerpsAdapter.sol
contracts/src/mocks/: MockChainlinkAggregator.sol  MockERC20.sol  MockPerps.sol  MockSequencerUptimeFeed.sol
contracts/test/: 01-Invariants.t.sol  01-JournalRegistry.t.sol  01-MTokenVault.t.sol  01-PerformanceOracle.t.sol  01-SessionFactory.t.sol  01-SettlementContract.t.sol  Interfaces.t.sol  MockPerpsTest.t.sol  SettlementKeeperIntegration.t.sol
contracts/test/fork/: ChainlinkSequencerForkTest.t.sol  GMXAdapterForkTest.t.sol  NavStressSim.t.sol
contracts/test/spike/: GMXSpike.t.sol
deployments/: sepolia.json
docs/: KEY-TOPOLOGY.md  RUNBOOK.md  STORACHA-PROBE.md
frontend/: .env.local.example  .gitattributes  next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/app/: layout.tsx  page.tsx  providers.tsx
frontend/app/(app)/: layout.tsx
frontend/lib/: format.ts  wagmi.ts
frontend/store/: index.ts
frontend/styles/: app.css  cards.css  landing.css  tokens.css  traider.css
frontend/types/: api.ts
gate/: __init__.py  allowances.py  evidence.py  harness.py  preflight.py  run_gate.py  speculator_sim.py
gate/tests/: __init__.py  conftest.py  test_allowances.py  test_gate_harness.py  test_preflight.py  test_run_gate.py  test_seam_a_launcher.py  test_speculator_sim_wiring.py
migrations/: README.md  alembic.ini  env.py  script.py.mako
migrations/tests/: test_migrations.py
migrations/versions/: 0001_initial_schema.py  0002_roles_and_grants.py  0003_pending_orders.py  0004_model_status_streaks.py  0005_pending_orders_submit_tx_hash.py
orchestrator/: pyproject.toml
orchestrator/prompts/: README.md  schema.json  system.md
orchestrator/src/orchestrator/: __init__.py  business_rules.py  mock_harness.py  schema.py  verify_integration.py
orchestrator/src/orchestrator/alerts/: __init__.py  sink.py
orchestrator/src/orchestrator/journal/: __init__.py  ipfs.py  publisher.py
orchestrator/src/orchestrator/loop/: __init__.py  adapter_factory.py  arb_bot.py  driver.py  failure_tracker.py  keeper_monitor.py  market_state.py  nonce_manager.py  price_pusher.py  run_session.py  session.py  settlement_keeper.py  supervisor.py
orchestrator/src/orchestrator/providers/: __init__.py  anthropic_adapter.py  gemini_adapter.py  openai_adapter.py
orchestrator/src/orchestrator/state/: __init__.py  db.py
orchestrator/tests/: __init__.py  test_schema.py
orchestrator/tests/fixtures/decisions/: adjust_missing_market.json  close_no_market_no_side.json  extra_field.json  good.json  hold_no_market_no_side.json  missing_action.json  open_missing_market.json  open_missing_side.json
orchestrator/tests/fixtures/decisions/claude/: 0001.json  0002_malformed.json  0003_timeout.json
orchestrator/tests/fixtures/decisions/cr02_test/: 0001.json
orchestrator/tests/fork/: __init__.py  test_gmx_encoding.py
orchestrator/tests/integration/: __init__.py  conftest.py  test_cr01_streak_rehydration.py  test_dual_pin_cid_parity.py  test_dual_pin_same_cid.py  test_filebase_live_pin.py  test_journal_gating.py  test_loop_15min.py  test_mini_session_gate.py  test_mock_cycle.py  test_pending_orders.py  test_post_deploy_verification.py  test_run_session_integration.py  test_sigkill_resume.py
orchestrator/tests/unit/: conftest.py  test_action_dispatch.py  test_adapter_factory.py  test_alert_sink.py  test_anthropic_adapter.py  test_arb_bot.py  test_arch_x_async_timing.py  test_batch_b_gaps.py  test_business_rules.py  test_cr03_market_consistency.py  test_gemini_adapter.py  test_journal_publisher.py  test_journal_storacha_failure.py  test_keeper_monitor.py  test_malformed_no_trade.py  test_market_state.py  test_nonce_manager.py  test_openai_adapter.py  test_operator_journal_signing_middleware.py  test_pause_on_3_failures.py  test_price_walk.py  test_provider_dispatch.py  test_provider_strike_consistency.py  test_run_session_env_params.py  test_schema_fixtures.py  test_session_duration_parameterized.py  test_settlement_keeper.py  test_shared_market_fairness.py  test_supervisor.py  test_wr05_keeper_resilience.py
scripts/: gen-keys.sh  gen-types.sh  pgadmin-servers.json  postgres-init.sql  seed.sh  test-gitleaks-blocks-secret.sh  verify-stack.sh
scripts/gate/: fund-holders.sh  preflight.sh  run-gate.sh
(+33 files in other folders)
