[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "backend"
version = "0.1.0"
description = "trAIder backend — FastAPI WebSocket service + Postgres + Redis"
requires-python = ">=3.11,<3.13"

dependencies = [
    "fastapi>=0.136",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.13",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.31",
    "psycopg[binary]>=3.2",
    "alembic>=1.18",
    "redis>=8.0",
    "pytest>=8.0",
    "pytest-asyncio>=1.4",
    "ruff>=0.15",
    "httpx>=0.28",
]

[tool.hatch.build.targets.wheel]
packages = ["src/backend"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP"]
ignore = ["E501"]
