[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "orchestrator"
version = "0.1.0"
description = "trAIder orchestrator + verifier — autonomous LLM trading loop"
requires-python = ">=3.11,<3.13"

# Phase 0 dependencies: mock harness + schema validation (no live LLM in Phase 0, D-14)
# Phase 2 live loop dependencies added (D-14 lifted for live provider loop)
dependencies = [
    "pydantic>=2.13",
    "web3>=7.16",
    "pytest>=8.0",
    "pytest-asyncio>=1.4",
    "ruff>=0.15",
    "httpx>=0.28",
    "anthropic>=0.105",          # Claude Opus 4.7 — NO temperature param (HTTP 400)
    "sqlalchemy[asyncio]>=2.0",  # async session; implied by db.py, missing from pyproject
    "asyncpg>=0.29",             # async Postgres driver; implied by db.py DSN
    "redis[asyncio]>=5.0",       # pub/sub; use redis.asyncio, not sync client
    "jinja2>=3.1",               # prompt template rendering (system.md Jinja2 {{placeholders}})
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=1.4",
    "ruff>=0.15",
    "pytest-cov>=5.0",   # TEST-02 >=80% coverage gate
    "freezegun>=1.4",    # mock wall-clock in loop driver tests (truthful-countdown D-11)
]

[tool.hatch.build.targets.wheel]
packages = ["src/orchestrator"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.uv.sources]
backend = { path = "../backend", editable = true }

[dependency-groups]
dev = [
    "backend",
    "pytest-cov>=7.1.0",
]

# ---------------------------------------------------------------------------
# Coverage config — SC-5 / TEST-02 (≥80% gate, Plan 02-06)
#
# Rationale for omissions:
#   - providers/anthropic_adapter.py: the call_claude() function makes live
#     network calls to the Anthropic API and cannot be exercised in unit tests
#     without a real API key. The pure classification helpers in the same module
#     (extract_tool_input, classify_exception, validate_decision) ARE measured —
#     they are unit-tested in tests/unit/test_anthropic_adapter.py (Plan 02-02).
#     We use `# pragma: no cover` on the call_claude function body rather than
#     omitting the whole module so the measurable helpers remain in scope.
#   - tests/*: test code is excluded from coverage measurement (standard practice).
# ---------------------------------------------------------------------------

[tool.coverage.run]
source = ["orchestrator"]
omit = [
    "*/tests/*",
    "*/test_*",
]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
